<resources>
    <string name="app_name">ProyectoFinalAppMoviles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_vender">Vender</string>
    <string name="menu_preguntas">Preguntas Frecuentes</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_calificanos">Calificanos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="plus">+</string>
    <string name="idTV">ID</string>
    <string name="nameTV">Name of album</string>
    <string name="dateTV">Date</string>
    <string name="createTaskListTV">Add Album</string>
    <string name="commitTasklistBTN">Create album</string>
    <string name="createTaskTV">Add photo</string>
    <string name="nameTaskTV">Name of photo</string>
    <string name="descTaskTV">Description</string>
    <string name="FkTV">Tasklist</string>
    <string name="lorem_title">Lorem ipsum</string>
    <string name="lorem_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_count">999 views</string>
    <string name="takePhotoBTN">Take picture</string>
    <string name="deleteButton">X</string>
    <string name="openGalBTN">Open galery</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_repassword">Vuelva a escribir la contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_mobile">Número de teléfono</string>
    <string name="label_age">Ingrese su fecha de nacimiento</string>
    <string name="registrarse">Registrarse</string>
    <string name="noUser">No soy usuario aún!</string>
    <string name="alreadyUser">Ya soy usuario!</string>
    <string name="atrasMsj">Atrás</string>

    <string name="sellDescription">Descripción del elemento</string>
    <string name="sellTitle">Título de us publicación</string>
    <string name="sellPrice">Precio de venta</string>
    <string name="sellCategory">Seleccione una categoría</string>
    <string name="publish">Publicar articulo</string>
    <string name="facebook_app_id">2752740844777866</string>
    <string name="fb_login_protocol_scheme">fb2752740844777866</string>


</resources>
