<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinalappmoviles.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.example.proyectofinalappmoviles.ui.categorias.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_cuenta"
        android:name="com.example.proyectofinalappmoviles.ui.cuenta.CuentaFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_cuenta" />

    <fragment
        android:id="@+id/nav_vender"
        android:name="com.example.proyectofinalappmoviles.ui.vender.VenderFragment"
        android:label="@string/menu_vender"
        tools:layout="@layout/fragment_vender" />

    <fragment
        android:id="@+id/nav_preguntas"
        android:name="com.example.proyectofinalappmoviles.ui.preguntas.PreguntasFragment"
        android:label="@string/menu_preguntas"
        tools:layout="@layout/fragment_preguntas" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.proyectofinalappmoviles.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.proyectofinalappmoviles.ui.MessagesFragment"
        android:label="Chats"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_calificanos"
        android:name="com.example.proyectofinalappmoviles.ui.calificanos.CalificanosFragment"
        android:label="@string/menu_calificanos"
        tools:layout="@layout/fragment_calificanos" />
</navigation>