<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="50dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:background="#eee"
                android:id="@+id/sell_image"
                android:src="@drawable/ic_launcher_foreground" />

            <EditText
                android:id="@+id/sell_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/sellTitle" />

            <EditText
                android:id="@+id/sell_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/sellDescription" />


            <EditText
                android:id="@+id/sellPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/sellPrice" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sellCategory"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/sellCategory"
                android:spinnerMode="dropdown"
                >
            </Spinner>

            <Button
                android:id="@+id/sellBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>