<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:background="#eee"
            android:id="@+id/signin_image"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyUser"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:id="@+id/alreadyUserTV"
            />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_email" />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_name"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_name" />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_username"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_username" />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_mobile"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_mobile" />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_study"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="Carrera Universitaria" />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_semester"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="Semestre" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingrese su contraseña"
            android:layout_marginBottom="10dp"/>


        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_password" />

        <EditText
            android:background="#fff"
            android:layout_height="35dp"
            android:id="@+id/signin_repassword"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_repassword" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrarse"
            android:id="@+id/login_signin"
            android:background="@color/greenButton"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="20dp"
            android:textColor="#fff"/>

    </LinearLayout>
</ScrollView>